tests/good/interpret/049-pattern-no-match.clap
val x = (case { 0 => 1}) (42)
