tests/bad/syntax/064-case-11.clap
val x = 
  case { 42 => x }

